@@ -223,6 +223,8 @@ Version 1.5
  - Add Aeotec ZW141 Nano Shutter (Nechry)
  - Add Popp 700045 Universal Keypad (Nechry)
  - Add Fibaro FGWPG111 Wall Plug (Nechry)
+ - Add Everspring SP815 Pet Immune Pir Motion Detector (Nechry)
+
 
 Version 1.4
  - Released 10th Jan, 2016
